Fixing scroll bar on video embed, truncating the project name on the backers page: 2 problems that came with big named projects

--- a/app/stylesheets/_video_embed.sass
+++ b/app/stylesheets/_video_embed.sass
@@ -8,7 +8,7 @@
     font-family: "museo-500"
     font-size: 24px
     line-height: 26px
-    padding: 12px 0
+    padding: 12px 0 8px 0
     a
       text-decoration: none
       +text-shadow(rgba(0,0,0,0.3), 2px, 2px, 3px)
